--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -10,6 +10,9 @@ jobs:  								# gather all the jobs that run in the workflow
 
       - name: Say Hello World       # Step 2: Type the word 'Hello World'
         run: echo 'Hello World'  	
+
+      - name: Security Check
+        uses: aufdenpunkt/python-safety-check@main
         
       - name: View a file           # Step 3: Two sub-steps involved
         run: |
