--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -12,7 +12,7 @@ jobs:  								# gather all the jobs that run in the workflow
         run: echo 'Hello World'  	
 
       - name: Security Check
-        uses: aufdenpunkt/python-safety-check@v2
+        uses: aufdenpunkt/python-safety-check@master
         
       - name: View a file           # Step 3: Two sub-steps involved
         run: |
